--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
@@ -1,1 +1,2 @@
 - ![dino!](assets/subdir/partydino.gif){:width 105} tests an asset with a manual link, custom title and in a subdirectory
+- ![greg-popovich-thumbs-up.png](../assets/greg-popovich-thumbs-up_1704749687791_0.png){:height 288, :width 252}
