--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
@@ -3,3 +3,9 @@
   
   ![dino!](assets/subdir/partydino.gif){:width 105} tests an asset with a manual link, custom title and in a subdirectory
 - ![greg-popovich-thumbs-up.png](../assets/greg-popovich-thumbs-up_1704749687791_0.png){:height 288, :width 252} and ![HEART Teams](../assets/HEART_Teams.png){:width 335.99774169921875}
+- From Inception:
+  #+BEGIN_QUOTE
+  Saito: Cobb? Impossible. We were young men together. I'm an old man.
+  ...
+  Cobb: I've come back for you... to remind you of something. Something you once knew...
+  #+END_QUOTE
