enhance: import markdown quotes
Went ahead and implemented ast block to string
as regex version of this would've been to buggy

--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
@@ -9,3 +9,11 @@
   ...
   Cobb: I've come back for you... to remind you of something. Something you once knew...
   #+END_QUOTE
+- > markdown quote
+  [[wut]]
+  line 3
+- Test of various ast types:
+  #+BEGIN_QUOTE
+  *Italic* ~~Strikethrough~~ ^^Highlight^^ #[[foo]]
+  **Learn Datalog Today** is an interactive tutorial designed to teach you the [Datomic](http://datomic.com/) dialect of [Datalog](http://en.wikipedia.org/wiki/Datalog). Datalog is a declarative **database query language** with roots in logic programming. Datalog has similar expressive power as [SQL](http://en.wikipedia.org/wiki/Sql).
+  #+END_QUOTE
