enhance: import page and block embeds
One embed per block as that's what DB version supports.
Fixes https://github.com/logseq/db-test/issues/198

--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2025_06_12.md
@@ -17,3 +17,8 @@
   *Italic* ~~Strikethrough~~ ^^Highlight^^ #[[foo]]
   **Learn Datalog Today** is an interactive tutorial designed to teach you the [Datomic](http://datomic.com/) dialect of [Datalog](http://en.wikipedia.org/wiki/Datalog). Datalog is a declarative **database query language** with roots in logic programming. Datalog has similar expressive power as [SQL](http://en.wikipedia.org/wiki/Sql).
   #+END_QUOTE
+- test page embed
+  {{embed [[page embed]]}}
+- test block embed
+  id:: 685434e1-0bb9-468c-a660-1642b00b2854
+- {{embed ((685434e1-0bb9-468c-a660-1642b00b2854))}}
