fix: use ast blocks for advanced queries conversion
Fixes cases where BEGIN_QUERY nested in BEGIN_SRC were incorrectly
being converted to queries e.g. most queries in
https://docs.logseq.com/#/page/advanced%20queries

--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2024_08_07.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2024_08_07.md
@@ -42,3 +42,13 @@
     :collapsed? False
   }
   #+END_QUERY
+- Get all tasks with a tag "project"
+  #+BEGIN_SRC clojure
+  #+BEGIN_QUERY
+  {:title "All blocks with tag project"
+    :query [:find (pull ?b [*])
+            :where
+            [?p :block/name "project"]
+            [?b :block/refs ?p]]}
+  #+END_QUERY
+  #+END_SRC
