fix: use ast blocks for simple queries conversions
Fixes cases where {{query nested in BEGIN_* blocks were incorrectly
being converted to queries. Also made ast block handling faster
by only doing one prewalk and cleaned up handling of queries

--- a/deps/graph-parser/test/resources/exporter-test-graph/journals/2024_08_07.md
+++ b/deps/graph-parser/test/resources/exporter-test-graph/journals/2024_08_07.md
@@ -52,3 +52,8 @@
             [?b :block/refs ?p]]}
   #+END_QUERY
   #+END_SRC
+- Find the blocks containing `tag2` but not `tag1`
+
+  #+BEGIN_EXAMPLE
+  {{query (and [[tag2]] (not [[tag1]]))}}
+  #+END_EXAMPLE 
